--- a/index.html
+++ b/index.html
@@ -5,64 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thợ Rèn Vô Tận</title>
     
-    <!-- Cấu hình Tailwind trước khi load script để đảm bảo áp dụng đúng lúc -->
-    <script>
-      window.tailwind = {
-        config: {
-          theme: {
-            extend: {
-              colors: {
-                rarity: {
-                  common: '#9ca3af',
-                  rare: '#3b82f6',
-                  epic: '#a855f7',
-                  legendary: '#eab308',
-                  mythic: '#ef4444'
-                }
-              },
-              animation: {
-                'fade-in': 'fadeIn 0.5s ease-out',
-                'slide-up': 'slideUp 0.3s ease-out',
-                'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-              },
-              keyframes: {
-                fadeIn: {
-                  '0%': { opacity: '0' },
-                  '100%': { opacity: '1' },
-                },
-                slideUp: {
-                  '0%': { transform: 'translateY(10px)', opacity: '0' },
-                  '100%': { transform: 'translateY(0)', opacity: '1' },
-                }
-              }
-            }
-          }
-        }
-      }
-    </script>
-    <script src="https://cdn.tailwindcss.com"></script>
-
+    <!-- CSS Fallback -->
     <style>
-      /* Fallback background color */
       body {
-        background-color: #020617; /* slate-950 */
-        color: #f1f5f9; /* slate-100 */
+        background-color: #020617;
+        color: #f1f5f9;
+        font-family: ui-sans-serif, system-ui, sans-serif;
       }
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #0f172a; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #334155; 
-        border-radius: 3px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #475569; 
-      }
+      ::-webkit-scrollbar { width: 6px; height: 6px; }
+      ::-webkit-scrollbar-track { background: #0f172a; }
+      ::-webkit-scrollbar-thumb { background: #334155; border-radius: 3px; }
+      ::-webkit-scrollbar-thumb:hover { background: #475569; }
       
       .glass-panel {
         background: rgba(30, 41, 59, 0.7);
@@ -71,16 +24,55 @@
         border: 1px solid rgba(255, 255, 255, 0.05);
       }
     </style>
-    <script type="importmap">
-    {
-      "imports": {
-        "react": "https://esm.sh/react@^19.2.3",
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
+
+    <!-- Tailwind CSS (Load Script FIRST, then Config) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              rarity: {
+                common: '#9ca3af',
+                rare: '#3b82f6',
+                epic: '#a855f7',
+                legendary: '#eab308',
+                mythic: '#ef4444'
+              }
+            },
+            animation: {
+              'fade-in': 'fadeIn 0.5s ease-out',
+              'slide-up': 'slideUp 0.3s ease-out',
+              'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+            },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              },
+              slideUp: {
+                '0%': { transform: 'translateY(10px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
+              }
+            }
+          }
+        }
       }
-    }
     </script>
+
+    <!-- Import Map (Stable Versions) -->
+    <script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
+  }
+}
+</script>
   <link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-slate-950 text-slate-100 font-sans antialiased overflow-hidden selection:bg-blue-500 selection:text-white">
