--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Thợ Rèn Vô Tận</title>
     
     <!-- CSS Fallback -->
@@ -25,7 +25,7 @@
       }
     </style>
 
-    <!-- Tailwind CSS (Load Script FIRST, then Config) -->
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -60,7 +60,7 @@
       }
     </script>
 
-    <!-- Import Map (Stable Versions) -->
+    <!-- Import Map -->
     <script type="importmap">
 {
   "imports": {
@@ -76,10 +76,15 @@
   <link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-slate-950 text-slate-100 font-sans antialiased overflow-hidden selection:bg-blue-500 selection:text-white">
-    <div id="root" class="h-screen w-screen flex flex-col bg-[url('https://images.unsplash.com/photo-1605806616949-1e87b487bc2a?q=80&w=2574&auto=format&fit=crop')] bg-cover bg-center">
-      <div class="absolute inset-0 bg-slate-950/90 backdrop-blur-[2px]"></div>
-      <div class="relative z-10 h-full flex flex-col"></div>
+    <!-- Background Container (Nằm ngoài root để không bị React xóa) -->
+    <div class="fixed inset-0 z-0 pointer-events-none">
+        <div class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1605806616949-1e87b487bc2a?q=80&w=2574&auto=format&fit=crop')] bg-cover bg-center opacity-60"></div>
+        <div class="absolute inset-0 bg-slate-950/70 backdrop-blur-[1px]"></div>
     </div>
+
+    <!-- React App Root -->
+    <div id="root" class="relative z-10 h-screen w-screen flex flex-col overflow-hidden"></div>
+    
     <script type="module" src="/index.js"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
