--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         overflow: hidden;
       }
 
-      /* Hiệu ứng kính mờ nâng cao */
       .glass-card {
         background: rgba(15, 23, 42, 0.6);
         backdrop-filter: blur(16px);
@@ -34,12 +33,6 @@
         box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
       }
 
-      /* Glow theo độ hiếm */
-      .glow-cosmic { box-shadow: 0 0 20px rgba(34, 211, 238, 0.4); border-color: rgba(34, 211, 238, 0.6); }
-      .glow-mythic { box-shadow: 0 0 20px rgba(239, 68, 68, 0.4); border-color: rgba(239, 68, 68, 0.6); }
-      .glow-legendary { box-shadow: 0 0 20px rgba(234, 179, 8, 0.4); border-color: rgba(234, 179, 8, 0.6); }
-
-      /* Animation cho các phần tử */
       @keyframes floating {
         0% { transform: translateY(0px); }
         50% { transform: translateY(-5px); }
@@ -47,32 +40,39 @@
       }
       .animate-float { animation: floating 3s ease-in-out infinite; }
 
-      /* Scrollbar mỹ thuật */
       ::-webkit-scrollbar { width: 5px; }
       ::-webkit-scrollbar-track { background: transparent; }
       ::-webkit-scrollbar-thumb { background: #1e293b; border-radius: 10px; }
       ::-webkit-scrollbar-thumb:hover { background: #334155; }
-
-      .custom-log-scroll {
-        mask-image: linear-gradient(to bottom, transparent, black 10%, black 90%, transparent);
-      }
     </style>
     <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@18.3.1",
-    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-    "react-dom": "https://esm.sh/react-dom@18.3.1",
-    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
-  }
-}
-</script>
+    {
+      "imports": {
+        "react": "https://esm.sh/react@18.3.1",
+        "react-dom": "https://esm.sh/react-dom@18.3.1",
+        "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+        "lucide-react": "https://esm.sh/lucide-react@0.344.0",
+        "react/": "https://esm.sh/react@18.3.1/",
+        "react-dom/": "https://esm.sh/react-dom@18.3.1/"
+      }
+    }
+    </script>
   <link rel="stylesheet" href="/index.css">
 </head>
   <body class="selection:bg-cyan-500/30 selection:text-cyan-200">
-    <div id="root"></div>
+    <div id="root">
+      <!-- Nút cấp cứu: Sẽ biến mất khi React load thành công -->
+      <div id="emergency-screen" style="display: flex; height: 100vh; width: 100vw; flex-direction: column; align-items: center; justify-content: center; background-color: #020617; color: white; gap: 20px; padding: 20px; text-align: center;">
+        <h1 style="font-size: 24px; font-weight: 900; color: #ef4444;">HỆ THỐNG ĐANG KHỞI CHẠY...</h1>
+        <p style="color: #94a3b8; max-width: 400px;">Nếu màn hình này không biến mất sau 5 giây, có thể dữ liệu cũ của bạn đang bị xung đột.</p>
+        <button 
+          onclick="localStorage.clear(); window.location.reload();" 
+          style="padding: 15px 30px; background-color: #ef4444; color: white; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; box-shadow: 0 0 20px rgba(239, 68, 68, 0.4);"
+        >
+          XÓA DỮ LIỆU CŨ & LÀM LẠI CUỘC ĐỜI
+        </button>
+      </div>
+    </div>
     <script type="module" src="/index.js"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
