--- a/index.html
+++ b/index.html
@@ -30,47 +30,63 @@
         -webkit-font-smoothing: antialiased;
       }
 
+      /* Hiệu ứng VIP Glass */
       .glass-card {
-        background: rgba(15, 23, 42, 0.7);
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
-        border: 1px solid rgba(255, 255, 255, 0.05);
-        box-shadow: 0 10px 40px -10px rgba(0, 0, 0, 0.5);
+        background: rgba(15, 23, 42, 0.6);
+        backdrop-filter: blur(25px) saturate(180%);
+        -webkit-backdrop-filter: blur(25px) saturate(180%);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        box-shadow: 0 20px 50px -15px rgba(0, 0, 0, 0.7);
       }
 
+      /* Glow động cho các phẩm cấp */
       .glow-common { filter: drop-shadow(0 0 5px rgba(148, 163, 184, 0.3)); }
-      .glow-rare { filter: drop-shadow(0 0 8px rgba(59, 130, 246, 0.4)); }
-      .glow-epic { filter: drop-shadow(0 0 10px rgba(168, 85, 247, 0.5)); }
-      .glow-legendary { filter: drop-shadow(0 0 12px rgba(251, 191, 36, 0.6)); }
-      .glow-mythic { filter: drop-shadow(0 0 15px rgba(239, 68, 68, 0.7)); }
-      .glow-cosmic { filter: drop-shadow(0 0 20px rgba(34, 211, 238, 0.8)); }
+      .glow-rare { filter: drop-shadow(0 0 10px rgba(59, 130, 246, 0.5)); }
+      .glow-epic { filter: drop-shadow(0 0 15px rgba(168, 85, 247, 0.6)); }
+      .glow-legendary { filter: drop-shadow(0 0 20px rgba(251, 191, 36, 0.7)); }
+      .glow-mythic { filter: drop-shadow(0 0 25px rgba(239, 68, 68, 0.8)); }
+      .glow-cosmic { filter: drop-shadow(0 0 30px rgba(34, 211, 238, 0.9)); }
+
+      @keyframes float {
+        0%, 100% { transform: translateY(0px); }
+        50% { transform: translateY(-10px); }
+      }
+      .animate-float { animation: float 3s ease-in-out infinite; }
+
+      @keyframes spin-slow {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+      }
+      .animate-spin-slow { animation: spin-slow 12s linear infinite; }
 
       @keyframes slide-up {
-        from { opacity: 0; transform: translateY(20px); }
+        from { opacity: 0; transform: translateY(30px); }
         to { opacity: 1; transform: translateY(0); }
       }
-      .animate-fade-in { animation: slide-up 0.5s cubic-bezier(0.16, 1, 0.3, 1); }
-
-      ::-webkit-scrollbar { width: 4px; height: 4px; }
-      ::-webkit-scrollbar-track { background: rgba(15, 23, 42, 0.3); }
-      ::-webkit-scrollbar-thumb { background: #334155; border-radius: 2px; }
-      ::-webkit-scrollbar-thumb:hover { background: #475569; }
+      .animate-fade-in { animation: slide-up 0.6s cubic-bezier(0.16, 1, 0.3, 1); }
 
       .bg-grid {
-        background-image: radial-gradient(circle at 2px 2px, rgba(255,255,255,0.03) 1px, transparent 0);
-        background-size: 32px 32px;
+        background-image: 
+          linear-gradient(rgba(255, 255, 255, 0.02) 1px, transparent 1px),
+          linear-gradient(90deg, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
+        background-size: 40px 40px;
       }
 
       .lava-glow {
         position: absolute;
-        width: 40%;
-        height: 40%;
-        background: radial-gradient(circle, rgba(249, 115, 22, 0.05) 0%, transparent 70%);
-        bottom: -10%;
+        width: 60%;
+        height: 60%;
+        background: radial-gradient(circle, rgba(99, 102, 241, 0.08) 0%, transparent 70%);
+        bottom: -20%;
         right: -10%;
         pointer-events: none;
         z-index: -1;
       }
+
+      ::-webkit-scrollbar { width: 6px; }
+      ::-webkit-scrollbar-track { background: transparent; }
+      ::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.1); border-radius: 10px; }
+      ::-webkit-scrollbar-thumb:hover { background: rgba(255, 255, 255, 0.2); }
     </style>
     <script type="importmap">
     {
@@ -86,7 +102,7 @@
     </script>
   <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="selection:bg-orange-500/30 selection:text-orange-200 bg-grid">
+  <body class="selection:bg-indigo-500/30 selection:text-indigo-200 bg-grid">
     <div class="lava-glow"></div>
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
